--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -5,16 +5,18 @@
     justify-content: space-around;
     flex-wrap: wrap;
     margin-left: 6rem;
+
   }
   
   .card {
     margin: 30px auto;
-    width: 300px;
+    width: 40%;
     height: 300px;
     border-radius: 40px;
   box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
     cursor: pointer;
     transition: 0.4s;
+
   }
   
   .card .card_image {
@@ -28,7 +30,7 @@
     height: 70%;
     border-radius: 40px;
     object-fit: cover;
-    margin-left: 2rem;
+    margin-left: 11rem;
   }
   
   .card .card_title {
