--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -87,3 +87,7 @@ h1 {
     visibility: visible;
     transform: scale(100) translateX(2px);
   }
+
+  .card-block {
+    border-top: #252525 solid;
+  }
