--- a/src/components/OrganizationsList/OrganizationsList.module.css
+++ b/src/components/OrganizationsList/OrganizationsList.module.css
@@ -16,9 +16,10 @@
     display: flex;
     gap: 1rem;
     text-align: center;
-    padding-top: 2rem;
+    margin-top: 4rem;
     font-weight: bold;
-    color: #7c7474 ;
+    color: #7c7474 !important;
+    visibility: visible !important;
 }
 
 .waviy{
