--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -7,7 +9,11 @@
 
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  /* font-family: "PT+Serif", sans-serif; */
   padding: 0;
   box-sizing: border-box;
+}
+
+* {
+  font-family: "Archivo+Black", sans-serif;
 }
