--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,88 +1,64 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:900");
-.header {
-  background-color: #fff;
-  padding-top: 5%;
-  padding-bottom: 5%;
-  border-bottom: #252525 solid;
-  border-top: #252525 solid;
+.cards-list {
+  z-index: 0;
+  width: 87%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-left: 6rem;
 }
 
-body {
-  position: relative;
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
-}
-
-h1 {
-  margin: 0;
-  font-family: "Montserrat", sans-serif;
-  font-size: 10vh;
-  letter-spacing: 0.3vw;
-  top: 15vh;
-  text-align: center;
-  left: 50%;
-  color: white;
-  background: url("https://99px.ru/sstorage/53/2018/07/tmb_232118_279704.jpg") repeat-y;
-  background-size: auto 200%;
-  background-clip: text;
-  text-fill-color: transparent;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: shine 8s linear infinite;
-}
-h1:nth-child(2) {
-  top: 50vh;
-}
-@keyframes shine {
-  from {
-    background-position: center 0;
-  }
-  to {
-    background-position: center 200%;
-  }
-}
-
-.button {
-  height: 50px;
-  width: 200px;
-  position: relative;
-  background-color: transparent;
+.card {
+  margin: 30px auto;
+  width: 40%;
+  height: 300px;
+  border-radius: 40px;
+  box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
+    -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
   cursor: pointer;
-  border: 2px solid #252525;
-  overflow: hidden;
-  border-radius: 30px;
-  color: #333;
-  transition: all 0.5s ease-in-out;
-  margin-top: 30px;
+  transition: 0.4s;
 }
 
-.btn-txt {
-  z-index: 1;
-  font-weight: 800;
-  letter-spacing: 4px;
+.card .card_image {
+  width: inherit;
+  height: inherit;
+  border-radius: 40px;
 }
 
-.type1::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  transition: all 0.5s ease-in-out;
-  background-color: #333;
-  border-radius: 30px;
-  visibility: hidden;
-  height: 10px;
-  width: 10px;
-  z-index: -1;
+.card .card_image img {
+  width: 80%;
+  height: 70%;
+  border-radius: 40px;
+  object-fit: cover;
+  margin-left: 11rem;
 }
 
-.button:hover {
-  box-shadow: 1px 1px 200px #252525;
-  border: none;
+.card .card_title {
+  text-align: center;
+  border-radius: 0px 0px 40px 40px;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  margin-top: -80px;
+  height: 40px;
+  color: black;
 }
 
-.type1:hover::after {
-  visibility: visible;
-  transform: scale(100) translateX(2px);
-}/*# sourceMappingURL=HomePage.css.map */
+.card:hover {
+  transform: scale(0.9, 0.9);
+  box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
+    -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+}
+
+.title-white {
+  color: white;
+}
+
+.title-black {
+  color: black;
+}
+
+@media all and (max-width: 500px) {
+  .card-list {
+    flex-direction: column;
+  }
+}
