--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -13,7 +13,7 @@ body {
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:900");
 
-h1 {
+.h1-header {
   margin: 0;
   font-family: "Montserrat", sans-serif;
   font-size: 10vh;
